tests/files/type_checker_tests/should_pass/027.cmdr
//Test bindings type check
x = fn (a: int, b: int): int -> a + b;
y = x;
