tests/files/type_checker_tests/should_fail/066.cmdr
//Should fail if bindings don't match
foo = fn (x: int, y: float): bool -> {
    return x && y;
};
